# Lesprima-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: project.md
esprima/: __init__.py  esprima.py  jsx_nodes.py  jsx_parser.py  jsx_syntax.py  messages.py  nodes.py  parser.py  scanner.py  syntax.py  token.py
tests/: test_bugfixes.py  test_es2018_2020.py  test_es2021_2025.py  test_esprima_issues.py
